--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Beatbar Apps - Omega1119
-description: Premium music and beat-making applications for iOS
-author: Omega1119
+title: GITC — Greenwood IT Consultancy Ltd
+description: Thoughtful, modern apps for macOS & iOS by GITC
+author: GITC
